-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.7.0
-
3
-
15034
In mdt_reint_open() if mdt_attr_get_complex() fails then we should not call mdt_finish_open() since MA_INODE may not be set in ma->ma_valid.
[ 1184.085897] LustreError: 7951:0:(mdt_open.c:873:mdt_finish_open()) ASSERTION( ma->ma_valid & MA_INODE ) failed: [ 1184.085901] LustreError: 7951:0:(mdt_open.c:873:mdt_finish_open()) LBUG [ 1184.085903] Pid: 7951, comm: mdt01_002 [ 1184.085904] [ 1184.085904] Call Trace: PID: 7951 TASK: ffff8801d066a640 CPU: 5 COMMAND: "mdt01_002" #0 [ffff8801d066d7b8] machine_kexec at ffffffff81039950 #1 [ffff8801d066d818] crash_kexec at ffffffff810d4372 #2 [ffff8801d066d8e8] panic at ffffffff81550d83 #3 [ffff8801d066d968] lbug_with_loc at ffffffffa02bef1b [libcfs] #4 [ffff8801d066d988] mdt_finish_open at ffffffffa0cc7489 [mdt] #5 [ffff8801d066da08] mdt_reint_open at ffffffffa0cc953f [mdt] #6 [ffff8801d066db18] mdt_reint_rec at ffffffffa0cae991 [mdt] #7 [ffff8801d066db38] mdt_reint_internal at ffffffffa0c98c83 [mdt] #8 [ffff8801d066db78] mdt_intent_reint at ffffffffa0c99176 [mdt] #9 [ffff8801d066dbc8] mdt_intent_policy at ffffffffa0c97859 [mdt] #10 [ffff8801d066dc28] ldlm_lock_enqueue at ffffffffa0643332 [ptlrpc] #11 [ffff8801d066dc88] ldlm_handle_enqueue0 at ffffffffa066b2b1 [ptlrpc] #12 [ffff8801d066dcf8] tgt_enqueue at ffffffffa06ea4b2 [ptlrpc] #13 [ffff8801d066dd18] tgt_request_handle at ffffffffa06e9745 [ptlrpc] #14 [ffff8801d066dd78] ptlrpc_main at ffffffffa069c9f1 [ptlrpc] #15 [ffff8801d066deb8] kthread at ffffffff8109eab6 #16 [ffff8801d066df48] kernel_thread at ffffffff8100c30a
This was found via md API fault injection.
- mentioned in
-
Page Loading...