LU-5401 mdt: handle getattr errors in mdt_reint_open()

In mdt_reint_open() if mdt_attr_get_complex_fails() then bail out and
return an error.

Signed-off-by: John L. Hammond <john.hammond@intel.com>
Change-Id: I67c773b93100064e4cfdc82b4356424fd102c925
Reviewed-on: http://review.whamcloud.com/11210
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Fan Yong <fan.yong@intel.com>
Reviewed-by: Mike Pershin <mike.pershin@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>