lustre/mdt/mdt_open.c
@@ -1825,6 +1825,8 @@ int mdt_reint_open(struct mdt_thread_info *info, struct mdt_lock_handle *lhc)
 			mdt_prep_ma_buf_from_rep(info, child, ma);
 			ma->ma_need |= MA_HSM;
 			result = mdt_attr_get_complex(info, child, ma);
+			if (result != 0)
+				GOTO(out_child, result);
 		} else {
 			/* Object does not exist. Likely FS corruption. */
 			CERROR("%s: name '"DNAME"' present, but FID "
